--- a/web/index.html
+++ b/web/index.html
@@ -57,6 +57,8 @@
   
   
   
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -114,6 +116,13 @@
       position: absolute;
       bottom: 0;
       right: 0;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #000000;
+        background-image: url("splash/img/dark-background.png");
+      }
     }
   </style>
   <script id="splash-screen-script">
